static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap: 400, 500, 600, 700|Josefin+Sans&display=swap|Balsamiq+Sans:400, 500, 600, 700');
body{
    background-color: #06061A;
    margin: 0 auto;
    font-family: 'Noto Serif', serif;
}

.flex-center{
    display: flex;
    justify-content: center;
}

.mellow-yellow{
    color: #DCAE0B;
    margin: 0 0;
}

h1,
h4, 
p{
    margin:0;
}

.materialize-override, 
a {
    font-weight: 700;
    font-size: 200%;
    text-decoration: none;
}

.font-size{
    font-size: 120%;
    line-height: 1.2;
}

.maroon-box{
    text-align: center;
    background-color: #5A0A0A;
    border-radius: 10px;
}

/* nav{
    background-color: inherit;
    display: flex;
    justify-content: center;
    box-shadow: none;
}

.pagination li a{
    display: block;
} */

/* ----------------------------------------BASE.HTML-------------------------------------- */
.nav-wrapper{
    /* height: 100px; */
    background-color: #182F1A;
}


#logo{
    /* max-height:  */
    font-size: 250%;
    margin-left: 10px;
    margin-top: 8px;
    color: #DCAE0B;
}

.nav-text{
    margin-top: 10px;
    font-size: 160%;
    line-height: 1.6em;
}
/* .addmovie-container{
    padding-top: 12px;
    width: 25%;
} */

.add-film-box{
    width: 220px;
    height: 45px;
}
/* --------------------------FOOTER-------------------------- */
footer{
    display: flex;
    margin: 0 0;
    padding: 0 10px;
    background-color: #182F1A;  
}

.footer-text{
    width: 70%;
    margin: 10px 0;
}

.footer-icons{
    width: 30%;
    display: flex;
    justify-content: flex-end;
}

.social-icons{
    margin-left: 10px;
    margin-right: 10px;
}
/* -------------------------------INDEX.HTML--------------------------- */
.title{
    text-align: center;
    margin-top: 150px;
    margin-bottom: 40px;
    font-size: 200%;
    font-family: 'Josefin Sans', sans-serif;
    text-shadow: 4px 4px 1px #000000
}

.explore-container{
    margin-bottom: 150px;
}
/* -------------------CALENDER SECTION------------------ */
.page-line{
    height: 10px;
    background-color: #182F1A;
    margin-bottom: 20px;
}

.calendar-header{
    margin-bottom: 20px;
    text-shadow: 4px 4px 1px #000000
}

#month{
    min-width: 340px;
    text-align: center;
}

#calendar-container{
    margin-bottom: 20px;
}

#calendar{
    width: 90%;
    background-color: #E3E3E3;
    background: linear-gradient(125deg, rgba(219,219,240,1) 18%, rgba(194,194,255,1) 40%);
}

#calendar-year,
#calendar-nav{
    width: 100%;
    padding: 20px 0px 10px;
    text-shadow: 1px 1px 1px #000000;
}   

#calendar-year{
    padding: 0px 0 5px;
    border-bottom: 3px solid #000000;
}

.fa-chevron-left{
    margin-top: 25px;
    margin-right: 20px;
    cursor: pointer;
    font-size: 2.5em;
}

.fa-chevron-right{
    margin-top: 25px;
    margin-left: 20px;
    cursor: pointer;
    font-size: 2.5em;
}

#previous-year{
    font-size: 1.5em;
    margin-top: 10px;
    margin-right: 13px;
    cursor: pointer;
}

#next-year{
    margin-top: 10px;
    margin-left: 11px;
    cursor: pointer;
    font-size: 1.5em;
}

#month,
#year{
    text-shadow: 1px 2px 1px #000000;
}

#day-labels{
    padding: 10px 0;
    border-bottom: 3px solid #000000;
}

.week-days{
    width: 14.2%;
}

#calendar-days{
    width: 100%;
}

.calendar-row{
    height: 120px;
}

.calendar-cell{
    width: 14%;
    border-bottom: 3px solid #000000;
    border-right: 3px solid #000000;
    padding: 0 5px;
    vertical-align: text-top;  
}

.calendar-cell-div{
    width: 100%;
}

.date-text{
    font-size: 120%;
    position: relative;
    cursor: pointer;
    width: 20px;
}

.calendar-image{
    margin-top: 3px;
    margin-left: 22px;
    width: 53px;
    border: 3px solid #000000
}

.grow { 
    transition: all .2s ease-in-out; 
}

.grow:hover { 
    transform: scale(3); 
}
/* -------------------------------ADDMOVIE.HTML--------------------------- */
.header{
    text-align: center;
    padding: 30px 0;
}

.header h1{
    text-shadow: 4px 4px 1px #000000;
}

#add-movie-container{
    margin: 20px 0 60px 8%;
}

#add-movie-form{
    width: 90%;
    background-color: #E3E3E3;
    background: linear-gradient(125deg, rgba(219,219,240,1) 18%, rgba(194,194,255,1) 40%);
    padding: 20px 10px 10px;
    border-radius: 10px 10px 0 0;
}

.input-field{
    font-family: 'Balsamiq Sans', cursive;
    font-weight: 700;
}

input,
textarea{
    font-family: 'Balsamiq Sans', cursive;
}

#add-submit{
    border-radius: 0 0 10px 10px;
}

.form-styling{
    display: flex;
    width: 90%;
    background: linear-gradient(45deg, rgba(219,219,240,1) 18%, rgba(194,194,255,1) 40%);
    background-color: #E3E3E3;
    padding-bottom: 20px;   
}

#notification-box{
    padding-left: 21px;
    padding-bottom: 40px;
    font-family: 'Balsamiq Sans', cursive;
    font-weight: 600;
    font-size: 120%;
}

.add-submit-box{
    width: 50%;
}

#add-more{
    padding-top: 5px;
}

#add-more,
#submit{
    font-family: 'Noto Serif', serif;
    width: 150px;
    height: 45px;
    font-size: 150%;
    cursor: pointer;
}
/* -------------------------------FILMS.HTML--------------------------- */
#film-container{
    flex-wrap: wrap;
    padding: 40px 0px;
}

.film-card{
    margin: 0 20px 40px;
    display: flex;
    width: 21%;
    height: 125px;
    border-radius: 10px;
    background-color: #E3E3E3;
}

.poster-box{
    width: 100px;
    padding: 10px; 
    text-align: center;
}

.poster-box a{
    font-size: 100%;
}

.film-poster{
    width: 70px;
}

.film-info{
    margin: 10px;
}

.film-info p{
    margin: 0;
}

.hidden{
    display: none;
}

.view-more-box{
    padding-top: 10px;
}

.view-more{
    width: 100px;
    padding: 5px;
    border-radius: 5px;
    cursor: pointer;
}

.view-more-text{
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 600;
    font-size: 100%;
}
/*------------MODAL------------ */
#confirm-modal-background,
#modal-background{
    background: rgba(0, 0, 0, 0.6);
    height: 100%;
    width:100%;
    position: absolute;
    top: 0;
    bottom: 0;
    display: none;
    justify-content: center;
    align-items: center;
}

.modal-card{
    width: 60%;
    max-height: 400px;
    background: #E3E3E3;
    padding: 10px;
    border-radius: 10px;
    border: 2px solid #000000;
    display: flex;
    position: relative;
}

#poster-side{
    min-width: 30%;
}

#expanded-poster-box{
    max-width: 200px;
}

#change-wrapper{
    padding: 10px 0;

}

.change-box{
    padding-bottom: 5px; 
    cursor: pointer;
}

.change-film{
    width: 100%;
    padding: 5px;
    border-radius: 5px;
}

#edit,
.change-text{
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 600;
    font-size: 110%; 
}

#info-side{
    padding: 10px;
}

.expanded-card-elements{
    width: 100%;
}

.expanded-card-text{
    text-align: center;
}

#expanded-card-title{
    font-weight: 600;
}
#expanded-summary-box{
    padding: 10px 0 20px;
}

#required-information-box{
    font-weight: 600;
}

.inline-info-boxes{
    width: 33%;
}

#extra-info{
    display: flex;
}

.extra-info-box{
    width: 50%;
    padding: 10px;
}

.extra-info-text{
    font-size: 90%;
    padding-bottom: 5px;
}

.big-and-bold{
    font-weight: 600;
    font-size: 110%;
}

#close-modal{
    font-size: 30px;
    position: absolute;
    right: 10px;
    top: -5px;
    cursor: pointer;
}
/* -------------------CONFIRM DELETE MODAL---------------- */

#confirm-card{
    display: block;
    width: 45%
}

#confirm-box-container{
    padding-bottom: 20px;
}

#message-box{
    text-align: center;
    padding: 20px 0 30px;
}

#confirm-message span{
    font-size: 120%;
}

.confirm-wrapper{
    width: 40%;
}

.confirm-boxes{
    padding: 5px;
    width: 100px;
    border-radius: 5px;
    cursor: pointer;
}

#stop-delete{
    font-weight: 700;
    font-size: 200%;
}

/*-----------------------------------------PHONE MEDIA QUERY-----------------------------------------*/
/*------------------------------BASE.HTML-------------------------------*/
@media only screen and (max-width: 767px){
.logo{
    width:30%;
}

.addmovie-container{
    width: 70%;
}

.footer-span{
    display: none;
}
/*------------------------------INDEX.HTML-------------------------------*/
#month{
    min-width: 240px;
}

#month h1{
    font-size: 3em;
}

.fa-chevron-left{
    margin-top: 15px;
    margin-right: 10px;
}

.fa-chevron-right{
    margin-top: 15px;
    margin-left: 10px;
}

.calendar-image{
    margin-left: 1px;
    width: 90%;
}

/*------------------------------ADDFILM.HTML-------------------------------*/
#add-more, #submit{
    width: 130px;
}

/*------------------------------FILMS.HTML-------------------------------*/
.film-card{
    width:100%;
}

#confirm-modal-background, #modal-background{
    height: 200%;
}

.modal-card{
    width: 90%;
    max-height: 100%;
    display: block;
}

#poster-side{
    min-width: 100%;  
    padding-top: 10px;
}

#expanded-poster-box{
    min-width: 100%;
}

#expanded-card-image{
    max-width: 40%;
    margin-left: 30%;
    padding-bottom: 10px;
}

.change-box{
    width: 90%;
    margin-left: 5%;
}

#info-side{
    padding-top: 0;
}

#confirm-card{
    width: 80%;
}
}

